[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obbench-django-common"
version = "0.1.0"
description = "Shared Django benchmarking components for Observability-Benchmarking"
requires-python = ">=3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["obbench_django_common*"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["obbench_django_common"]